// Version
syntax = "proto3";

// Package name
option go_package = "github.com/Win-TS/gleam-backend";

// Structure
message DeleteUserReq {
    string uid = 1;
}

message DeleteUserRes {
    string uid = 1;
    bool success = 2;
}

message GetUidFromEmailReq {
    string email = 1;
}

message GetUidFromEmailRes {
    string email = 1;
    string uid = 2;
}

message VerifyTokenReq {
    string token = 1;
}

message VerifyTokenRes {
    string uid = 1;
    bool success = 2;
}

message RegisterNewUserReq {
    string email = 1;
    string password = 2;
    string phone_no = 3;
    string username = 4;
    int32 userId = 5;
}

message RegisterNewUserRes {
    string uid = 1;
    string email = 2;
    string phone_no = 3;
    string username = 4;
    int32 userId = 5;
    bool success = 6;
}

// Methods
service AuthGrpcService {
    rpc DeleteUser(DeleteUserReq) returns (DeleteUserRes);
    rpc GetUidFromEmail(GetUidFromEmailReq) returns (GetUidFromEmailRes);
    rpc VerifyToken(VerifyTokenReq) returns (VerifyTokenRes);
    rpc RegisterNewUser(RegisterNewUserReq) returns (RegisterNewUserRes);
}